<resources>
    <string name="app_name">Learnika</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AutoLearn- Smart Test Drive Test Application</string>
    <string name="nav_header_subtitle">support@autolearn.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite" />
    <string name="action_play_next" />
    <string name="mobile_number_is_not_valid">Mobile Number is not Valid</string>
    <string name="send_sms_failed_try_agin">Error in Sending SMS, Please try again</string>
    <string name="otp_is_not_correct">Activation SMS code is not Valid</string>
    <string name="error_in_saving_user_data">‌Error in Saving User Data</string>
    <string name="ads_text">Welcome!</string>
    <string name="category_name_is_requirement">Select Group</string>
    <string name="question_is_requirement">Please Enter the Question</string>
    <string name="answer_is_requirement">Please Enter the answer</string>
    <string name="error_in_getting_packages">Error in Getting Packages</string>
    <string name="toman">$</string>
    <string name="buy_with_number">Buy(%s)</string>
    <string name="check_internet_connection">Error in connecting to Server</string>
    <string name="invalid_user_code">User Code is not Valid, Please reinstall App</string>
    <string name="title_activity_iap">IAPActivity</string>
    <string name="error_in_purchase">Error in buying from PlayStore</string>
    <string name="flashcard_inserted_successfull">%d Flashcards Added into Category</string>
    <string name="error_in_get_inventory">PlayStore is Required. Please verify you are Login in PlaySotre</string>
    <string name="invalid_package">Package is not Valid</string>
    <string name="buy_success">The Buy was Successful</string>
    <string name="user_data_saved_successfull">User Data Saved Successfully</string>
    <string name="error_in_getting_user_data">Error in Getting User Data</string>
    <string name="user_data_not_found">User Data Not Found</string>
    <string name="bad_request">BAD_REQUEST</string>
    <string name="press_back_again_to_exit">To Exit Tap Again on Back</string>
    <string name="add_category_first">To Add New Category Tap on + </string>
    <string name="return_to_home">Back</string>
    <string name="or">or</string>
    <string name="flash_added_sucess">Flashcard added successfully</string>
    <string name="review_finished">All Flashcards reviewed</string>
    <string name="question_image_title">Question Image</string>
    <string name="free_review">Free Review</string>
    <string name="flashcard_ended">All Flashcards Reviewed</string>
    <string name="available_categories">Categories</string>
    <string name="of">of</string>
    <string name="action_settings_help">Tap for Setting</string>
    <string name="add_category_help">Tap to create new category</string>
    <string name="add_category">New Category</string>
    <string name="add_flashcard">Create or Import Flashcard</string>
    <string name="add_flashcard_help">You can import or create flashcards</string>
    <string name="review_short_hint">Start Review</string>
    <string name="review_long_hint">If you had flashcards to review this button will be enabled</string>
    <string name="free_review_long_hint">Tap to review flashcards</string>
    <string name="free_review_short_hint">Flashcards Free Review</string>
    <string name="answer_btn_long_hint">Tap for display answer</string>
    <string name="answer_btn_short_hint">View Answer</string>
    <string name="correct_btn_short_hint">Correct Answer</string>
    <string name="correct_btn_long_hint">Select if answer is correct</string>
    <string name="incorrect_btn_long_hint">Select if answer is incorrect</string>
    <string name="incorrect_btn_short_hint">Incorrect answer</string>
    <string name="save_flashcard_help">Tap for saving flashcard</string>
    <string name="save_flashcard">Save flashcard</string>
    <string name="take_image">Add image</string>
    <string name="take_image_long_help">Tap for add image to flashcard</string>
    <string name="save_category">Save Category</string>
    <string name="save_category_help">Top this for save category</string>
    <string name="new_category">New Category</string>
    <string name="you_have_flashcard_to_review">You have some flashcards for review</string>
    <string name="start">Start</string>
    <string name="comment_about_app">Comment about App</string>
    <string name="last_review">Last Review:</string>
    <string name="total">Total:</string>
    <string name="reviewable">Reviewable:</string>
    <string name="start_lightner_review">Leitner Review</string>
    <string name="box_1">Box 1</string>
    <string name="available">Available: </string>
    <string name="box_2">Box 2</string>
    <string name="box_3">Box 3</string>
    <string name="box_4">Box 4</string>
    <string name="box_5">Box 5</string>
    <string name="category_name">Category Name:</string>
    <string name="category_color">Category Color:</string>
    <string name="question">Question: </string>
    <string name="answer">Answer:</string>
    <string name="buy">Buy</string>
    <string name="import_flashcards_in_category">Import Flashcards in Category</string>
    <string name="package_name">Package Name: </string>
    <string name="price">Price</string>
    <string name="read_automatic_question">Read Automatic Question</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="save">Save</string>
    <string name="delete_category">Delete Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="what_is_lightner">What is Leitner Method ?</string>
    <string name="i_want_to_learn">I WANT TO LEARN</string>
    <string name="search">Search</string>
    <string name="more_info_about_leithner">More information about Leitner method</string>
    <string name="Learn_more">Learn More</string>
    <string name="lightner_review">Leitner Review</string>
</resources>

