<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android" android:padding="@dimen/layout_padding" android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_margin="@dimen/card_margin"
        android:layout_height="match_parent"
        android:layoutDirection="ltr">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/box_round"
                android:layout_height="match_parent">
                <Switch
                    android:id="@+id/spell_question_switch"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layoutDirection="ltr"
                    android:checked="true"
                    android:text="@string/read_automatic_question" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/box_round"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <Switch
                android:id="@+id/alarm_switch"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layoutDirection="ltr"
                android:text="@string/reminder_time" />

            <TimePicker
                android:id="@+id/alarm_time_picker"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"

                android:timePickerMode="spinner" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="200dp"
                android:layout_margin="20dp"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:background="@drawable/gradiant_1"
                android:gravity="center"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
