    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="@dimen/card_margin"
        android:layout_weight="1"
        card_view:cardCornerRadius="@dimen/card_category_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/category_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/gradiant_6"
                android:layout_alignParentLeft="true"
                android:src="@drawable/free_review" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content" android:layout_toRightOf="@+id/category_icon">
                <TextView
                    android:id="@+id/title"
                    style="@style/header5"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="3dp"
                    android:text="title"
                    android:textSize="@dimen/category_title" />
                <LinearLayout
                    android:id="@+id/text_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_padding">
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/category_title_padding"
                            android:paddingRight="@dimen/category_title_padding"
                            android:text="@string/total"
                            android:textSize="@dimen/header4" />
                        <TextView
                            android:id="@+id/total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/category_title_padding"
                            android:paddingRight="@dimen/category_title_padding"
                            android:text=""
                            android:textSize="@dimen/header4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/category_title_padding"
                            android:paddingRight="@dimen/category_title_padding"
                            android:text="@string/reviewable"
                            android:textSize="@dimen/header4" />
                        <TextView
                            android:id="@+id/reviewable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/category_title_padding"
                            android:paddingRight="@dimen/category_title_padding"
                            android:text=""
                            android:textSize="@dimen/header4" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/layout_padding">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/category_title_padding"
                        android:paddingRight="@dimen/category_title_padding"
                        android:text="@string/last_review"
                        android:textSize="@dimen/header5" />
                    <TextView
                        android:id="@+id/last_visit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/category_title_padding"
                        android:paddingRight="@dimen/category_title_padding"
                        android:text=""
                        android:textSize="@dimen/header5" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>